--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -6,3 +6,68 @@ h1 {
 img {
     width: 100%;
 }
+
+body {
+    margin: 0;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+a {
+    text-decoration: none;
+}
+
+.topnav {
+    overflow: hidden;
+    background-color: #333;
+}
+
+.topnav a {
+    float: left;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+}
+
+.topnav a:hover {
+    background-color: #ddd;
+    color: black;
+}
+
+.topnav a.active {
+    background-color: #04AA6D;
+    color: white;
+}
+
+.create-user-container {
+    padding: 15px;
+}
+
+.create-user-container label {
+    display: block;
+}
+
+.btn-submit {
+    margin-top: 15px;
+}
+
+.box-btn {
+    display: flex !important;
+}
+
+.update-user-container {
+    padding: 15px;
+}
+
+.update-user-container label {
+    display: block;
+}
+
+.upload-file-container {
+    padding: 15px;
+}
+
+.upload-file-container label {
+    display: block;
+}
