--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -4,11 +4,79 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>NodeJsBasic</title>
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-    <h1>hello world from ejs</h1>
-    <img src="/image/imager_64781.jpeg" alt="">
+  <div class="topnav">
+    <a class="active" href="/">Home</a>
+    <a href="/upload">Upload file</a>
+  </div>
+  
+  <div>
+    <div class="w3-container">
+      <h2>List Users Table</h2>
+      <table class="w3-table-all w3-hoverable">
+        <thead>
+          <tr class="w3-light-grey">
+            <th>ID</th>
+            <th>First Name</th>
+            <th>Last Name</th>
+            <th>Actions</th>
+          </tr>
+        </thead>
+        <tbody>
+          <% for(let i=0; i < dataUser.length; i++) { %>
+            <tr>
+              <td><%= dataUser[i].id %></td>
+              <td><%= dataUser[i].firstName %></td>
+              <td><%= dataUser[i].lastName %></td>
+              <td class="box-btn">
+                <button type="button">
+                  <a href="/detail/user/<%= dataUser[i].id%>">Detail</a> 
+                </button>
+                <form action="/edit-user/<%= dataUser[i].id%>">
+                  <button type="submit">Edit</button>
+                </form>
+                <form action="/delete-user" method="post">
+                  <input type="text" value="<%= dataUser[i].id%>" name="userId" hidden>
+                  <button type="submit">Delete</button>
+                </form>
+              </td>
+            </tr>
+          <% } %>
+        </tbody>
+      </table>
+    </div>
+    <div class="create-user-container">
+      <form action="/create-new-user" method="post">
+        <div>
+          <b>
+            Create a new user:
+          </b>
+        </div>
+        <div>
+          <label>First name</label>
+          <input type="text" name="firstName">
+        </div>
+        <div>
+          <label>Last name</label>
+          <input type="text" name="lastName">
+        </div>
+        <div>
+          <label>Email</label>
+          <input type="email" name="email">
+        </div>
+        <div>
+          <label>Address</label>
+          <input type="text" name="address">
+        </div>
+        <div>
+          <button type="submit" class="btn-submit">Submit</button>
+        </div>
+      </form>
+    </div>
+  </div>
 </body>
 </html>
